--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@line/liff": "2.24.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
